v8/Web-App/farmware/take-photo.md
---
title: "Take Photo"
slug: "take-photo"
description: "Farmware for taking photos with your FarmBot's camera"
---

* toc
{:toc}


{%
include callout.html
type="success"
title="1st party farmware"
content="This farmware comes pre-installed with FarmBot OS."
%}



<iframe class="embedly-embed" src="//cdn.embedly.com/widgets/media.html?url=http%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DRYQyYA4ZwF8&src=http%3A%2F%2Fwww.youtube.com%2Fembed%2FRYQyYA4ZwF8&type=text%2Fhtml&key=f2aa6fc3595946d0afc3d76cbbd25dc3&schema=youtube" width="854" height="480" scrolling="no" frameborder="0" allow="autoplay; fullscreen" allowfullscreen="true"></iframe>

To take a photo, press the <span class="fb-button fb-green">take photo</span> button. Once FarmBot takes the photo, it will upload it to the web app along with the coordinates of where the photo was taken, as well as the date and time.

Once you have taken multiple photos, use the `PREV` and `NEXT` buttons to navigate through your images. To delete a photo, press the <span class="fb-button fb-red">delete photo</span> button.


![Screen Shot 2019-05-02 at 5.42.10 PM.png](_images/Screen_Shot_2019-05-02_at_5.42.10_PM.png)



{%
include callout.html
type="info"
title=""
content="The default camera is a USB camera. If you would like to use a Raspberry Pi camera, use the camera selection dropdown menu in the **Device** widget on the [Device](../../Web-App/device.md#device) page."
%}


# What's next?

 * [Camera Calibration](../farmware/camera-calibration.md)
